Updated names etc

--- a/www/story2.Rmd
+++ b/www/story2.Rmd
@@ -2,4 +2,4 @@
 title: "My second story"
 ---
 
-It was the best of times, it was the worst of times...
+It was the best of times,blah blah smith college
